cryptography_bolsa/log260325.log
cryptos.c: In function ‘generating’:
cryptos.c:44:52: error: invalid operands to binary % (have ‘double’ and ‘double’)
   44 |                         if((ra*cos(x) + rb*cos(y)) % rc == (ra*sin(x) + rb*sin(y)) % rc){
      |                            ~~~~~~~~~~~~~~~~~~~~~~~ ^
      |                                       |
      |                                       double
cryptos.c:44:84: error: invalid operands to binary % (have ‘double’ and ‘double’)
   44 |                         if((ra*cos(x) + rb*cos(y)) % rc == (ra*sin(x) + rb*sin(y)) % rc){
      |                                                            ~~~~~~~~~~~~~~~~~~~~~~~ ^
      |                                                                       |
      |                                                                       double
